// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Organization Integration GET /organization should return 200 and list of organizations 1`] = `
[
  {
    "bannerUrl": null,
    "createdAt": "2020-01-01T00:00:00.000Z",
    "description": "UBC Okanagan",
    "googleAuthEnabled": true,
    "id": 1,
    "legacyAuthEnabled": false,
    "logoUrl": null,
    "name": "UBCO",
    "ssoEmailPatterns": null,
    "ssoEnabled": false,
    "ssoUrl": null,
    "websiteUrl": null,
  },
  {
    "bannerUrl": null,
    "createdAt": "2020-01-01T00:00:00.000Z",
    "description": "UBC Okanagan",
    "googleAuthEnabled": true,
    "id": 2,
    "legacyAuthEnabled": false,
    "logoUrl": null,
    "name": "UBCO",
    "ssoEmailPatterns": null,
    "ssoEnabled": false,
    "ssoUrl": null,
    "websiteUrl": null,
  },
]
`;

exports[`Organization Integration GET /organization/:oid should return 200 and response when user is logged in 1`] = `
{
  "bannerUrl": null,
  "createdAt": "2020-01-01T00:00:00.000Z",
  "description": "UBC Okanagan",
  "googleAuthEnabled": true,
  "id": 1,
  "legacyAuthEnabled": false,
  "logoUrl": null,
  "name": "UBCO",
  "semesters": [],
  "ssoEmailPatterns": null,
  "ssoEnabled": false,
  "ssoUrl": null,
  "websiteUrl": null,
}
`;

exports[`Organization Integration GET /organization/:oid/get_courses{/:page} should return 200 when user is an admin 1`] = `
[
  {
    "courseId": 1,
    "courseName": "CS 304",
    "isEnabled": true,
    "sectionGroupName": "001",
    "semester": {
      "color": "blue",
      "description": "Test Semester Description",
      "endDate": "2022-12-30T08:00:00.000Z",
      "id": 1,
      "name": "Test Semester",
      "startDate": "2020-08-31T07:00:00.000Z",
    },
    "semesterId": 1,
  },
]
`;

exports[`Organization Integration GET /organization/:oid/get_user/:uid should return 200 when user is found 1`] = `
{
  "courses": [],
  "organizationId": 1,
  "organizationRole": "member",
  "user": {
    "accountDeactivated": false,
    "email": "user@ubc.ca",
    "firstName": "User",
    "fullName": "User Person",
    "globalRole": "user",
    "id": 2,
    "lastName": "Person",
    "photoUrl": "https://example.com",
    "sid": null,
  },
}
`;

exports[`Organization Integration GET /organization/:oid/get_users{/:page} should return 200 when user is an admin 1`] = `
{
  "total": 1,
  "users": [
    {
      "email": "user@ubc.ca",
      "firstName": "User",
      "lastName": "Person",
      "organizationRole": "admin",
      "photoUrl": "https://example.com",
      "userId": 1,
      "userRole": "user",
    },
  ],
}
`;

exports[`Organization Integration GET /organization/:oid/stats should return 200 when user is an admin 1`] = `
{
  "courses": 1,
  "members": 2,
  "membersProfessors": 1,
}
`;
